# dicenotation

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  DiceNotation.licenseheader  DiceNotation.sln  DiceNotation.vcxproj  DiceNotation.vcxproj.filters  Doxyfile  LICENSE  README.md  appveyor.yml
examples/ExampleConsole/: ExampleConsole.cpp  ExampleConsole.vcxproj  ExampleConsole.vcxproj.filters  ReadMe.txt  stdafx.cpp
examples/simpleconsole/: simpleconsole.cpp
include/: DiceNotation.h
include/dicenotation/: DiceStruct.h
include/dicenotation/interfaces/: IDiceParser.h  IDiceRoller.h
include/dicenotation/parser/: DiceParser.h
include/dicenotation/roller/: StdRandomRoller.h
src/: CMakeLists.txt  DiceNotation.cpp  DiceParser.cpp  DiceStruct.cpp  IDiceParser.cpp  StdRandomRoller.cpp
tests/: CMakeLists.txt  fake.cpp
